fixed spy navigation link visibility

--- a/src/scss/components/spy-navigation.scss
+++ b/src/scss/components/spy-navigation.scss
@@ -3,12 +3,12 @@
 @import "../links";
 @import "../mixins/rotating-arrow";
 
-@mixin ls {
+@mixin invisible {
   opacity: 1;
   transform: translateY(0);
 }
 
-@mixin lx {
+@mixin visible {
   opacity: 1;
   transform: translateY(-100%);
 }
@@ -27,10 +27,10 @@
 
     #{$nav}__link {
       position: static;
-      @include ls;
+      @include invisible;
       &:first-child {
         position: static;
-        @include ls;
+        @include invisible;
       }
     }
 
@@ -94,27 +94,27 @@
     opacity: 0;
 
     &:first-child {
-      @include ls;
+      @include visible;
     }
 
     @include mqmin($viewportM) {
-      @include ls;
+      @include invisible;
       display: inline-block;
       padding: $XL;
       position: static;
       width: auto;
       &:first-child {
-        @include ls;
+        @include visible;
       }
     }
 
     &--active {
       color: $orange-100;
       z-index: 1;
-      @include lx;
+      @include visible;
 
       &:first-child {
-        @include lx;
+        @include visible;
       }
     }
   }
